--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,24 @@ body {
     margin: 30px;
     padding: 40px;
 }
+
+.container {
+    padding: 15px 20px;
+    height: 300px;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box {
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    margin: 15px;
+}
