--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,64 @@
-.nav-container {
-    padding: 12px 120px;
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.container {
+    background: gray;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    height: 400px;
 }
 
-.links {
-    display: flex;
-    align-items: center;
-    /* gap: 20px; */
-}
 
-.links a {
-    margin-right: 20px;
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-}
-
-.nav-container button {
-    background: blue;
-    border: none;
-    padding: 12px 25px;
-    border-radius: 20px;
-}
-
-.nav-container button a {
-    text-decoration: none;
+.container h1 {
     color: white;
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+
+.container p {
+    color: white;
+    margin: 10px;
+    text-align: center;
+}
+
+.team {
+    text-align: center;
+    padding: 30px 0px;
+    font-size: 34px;
+}
+
+.container-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 22px;
+    flex-direction: column ;
+}
+
+/* Media Query for Tablets Ipads portrait mode */
+@media screen and (min-width: 768px){
+    .team{
+        font-size: 50px;
+        padding: 40px 10px;
+    }
+}
+
+/* laptop */
+@media screen and (min-width: 1024px) {
+    .container {
+        height: 250px;
+    }
+
+    .team {
+        font-size: 55px;
+    }
+
+    .container-images {
+        flex-direction: row;
+    }
 }
